<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_mid360_calibrator</name>
  <version>0.1.0</version>
  <description>Mid-360 LiDAR to body extrinsic calibration with cloud export.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <build_depend>libceres-dev</build_depend>
  <exec_depend>libceres-dev</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>yaml-cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
